--- a/Config.ini
+++ b/Config.ini
@@ -1,5 +1,5 @@
 [DEFAULT]
-playlists_url = https://www.youtube.com/watch?v=dfPBOt_rhdw&list=RDdfPBOt_rhdw&start_radio=1&t=229;https://www.youtube.com/watch?v=OAVD4buFGmE&list=RDOAVD4buFGmE&start_radio=1
+playlists_url =
 video_urls = https://www.youtube.com/c/MichaelJackson/videos
 download_path =/home/tuuk/YoutubeDownload/videos
 Enter the video quality (4k,1080,720,480,360,240,144) = 144
