--- a/Config.ini
+++ b/Config.ini
@@ -1,5 +1,5 @@
 [DEFAULT]
-playlists_url =
-video_urls = https://www.youtube.com/c/MichaelJackson/videos
+playlists_url =https://www.youtube.com/watch?v=Q1tMAIl3ros&list=RDQ1tMAIl3ros&start_radio=1;https://www.youtube.com/watch?v=eGT84Rcyvv4&list=RDMMeGT84Rcyvv4&start_radio=1
+video_urls = https://www.youtube.com/c/MichaelJackson/videos;https://www.youtube.com/c/GradusyCom/videos
 download_path =/home/tuuk/YoutubeDownload/videos
 Enter the video quality (4k,1080,720,480,360,240,144) = 144
