--- a/Config.ini
+++ b/Config.ini
@@ -1,5 +1,5 @@
 [DEFAULT]
 playlists_url= https://www.youtube.com/watch?v=PeAqrEySmPE&list=PL4E8132BB10137FFA;
 video_urls =
-download_path =/home/streaming/music
+download_path =/home/tuuk/YoutubeDownload/videos
 Enter the video quality (4k,1080,720,480,360,240,144) = 144
